tests/snapshots/integration__integration_tests__help__help_config_show.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - show
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config show - Show configuration files & locations
Usage: [1m[36mwt config show[0m [36m[OPTIONS][0m

[1m[32mOptions:[0m
      [1m[36m--doctor[0m
          Test commit generation pipeline

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Shows location and contents of user config ([2m~/.config/worktrunk/config.toml[0m)
and project config ([2m.config/wt.toml[0m).

If a config file doesn't exist, shows defaults that would be used.

[32mDoctor Mode[0m

Use [2m--doctor[0m to test commit generation with a synthetic diff:

  [2mwt config show --doctor[0m

This verifies that the LLM command is configured correctly and can generate
commit messages.
