tests/snapshots/integration__integration_tests__help__help_list_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - list
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt list - List worktrees and optionally branches

Usage: [1m[36mwt list[0m [36m[OPTIONS]
       [1m[36mwt list[0m [36m<COMMAND>

[1m[32mCommands:
  [1m[36mstatusline[0m  Single-line status for shell prompts

[1m[32mOptions:
      [1m[36m--format[0m[36m [0m[36m<FORMAT>
          Output format (table, json)
          
          [default: table]

      [1m[36m--branches
          Include branches without worktrees

      [1m[36m--remotes
          Include remote branches

      [1m[36m--full
          Show CI and [1mmain[0m diffstat

      [1m[36m--progressive
          Show fast info immediately, update with slow info
          
          Displays local data (branches, paths, status) first, then updates with remote data (CI, upstream) as it arrives. Auto-enabled for TTY.

  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Show all worktrees with their status. The table includes uncommitted changes, divergence from main and remote, and optional CI status.

The table renders progressively: branch names, paths, and commit hashes appear immediately, then status, divergence, and other columns fill in as
background git operations complete. With [2m--full[0m, CI status fetches from the network — the table displays instantly and CI fills in as results
arrive.

[32mExamples

List all worktrees:

  [2m$ wt list

Include CI status and line diffs:

  [2m$ wt list --full

Include branches that don't have worktrees:

  [2m$ wt list --branches --full

Output as JSON for scripting:

  [2m$ wt list --format=json

[32mColumns

  Column   Shows                                       
  ───────  ────────────────────────────────────────────
  Branch   Branch name                                 
  Status   Compact symbols (see below)                 
  HEAD±    Uncommitted changes: +added -deleted lines  
  main↕    Commits ahead/behind main                   
  main…±   Line diffs in commits ahead of main ([2m--full[0m)
  Path     Worktree directory                          
  Remote⇅  Commits ahead/behind tracking branch        
  CI       Pipeline status ([2m--full[0m)                    
  Commit   Short hash (8 chars)                        
  Age      Time since last commit                      
  Message  Last commit message (truncated)             

[1mCI status

The CI column shows GitHub/GitLab pipeline status:

  Indicator  Meaning                  
  ─────────  ─────────────────────────
  [32m●[0m green    All checks passed        
  [34m●[0m blue     Checks running           
  [31m●[0m red      Checks failed            
  [33m●[0m yellow   Merge conflicts with base
  [90m●[0m gray     No checks configured     
  (blank)    No upstream or no PR/MR  

CI is only checked for branches that track a remote — local-only branches show blank. Any CI dot appears dimmed when there are unpushed local changes
(stale status). CI indicators are clickable links to the PR page. Results are cached for 30-60 seconds; use [2mwt config cache[0m to view or clear.

[32mStatus symbols

The Status column has multiple subcolumns. Within each, only the first matching symbol is shown (listed in priority order):

  Subcolumn         Symbol  Meaning                         
  ────────────────  ──────  ────────────────────────────────
  Working tree (1)  [36m+[0m       Staged files                    
  Working tree (2)  [36m![0m       Modified files (unstaged)       
  Working tree (3)  [36m?[0m       Untracked files                 
  Worktree          [31m✘[0m       Merge conflicts                 
                    [33m⤴[0m       Rebase in progress              
                    [33m⤵[0m       Merge in progress               
                    [2m/[0m       Branch without worktree         
                    [31m⚑[0m       Path doesn't match template     
                    [33m⊟[0m       Prunable (directory missing)    
                    [33m⊞[0m       Locked worktree                 
  Main              [2m^[0m       Is the main branch              
                    [33m✗[0m       Would conflict if merged to main
                    [2m_[0m       Same commit as main             
                    [2m⊂[0m       Content integrated              
                    [2m↕[0m       Diverged from main              
                    [2m↑[0m       Ahead of main                   
                    [2m↓[0m       Behind main                     
  Remote            [2m|[0m       In sync with remote             
                    [2m⇅[0m       Diverged from remote            
                    [2m⇡[0m       Ahead of remote                 
                    [2m⇣[0m       Behind remote                   

Rows are dimmed when the branch content is already in main ([2m_[0m same commit or [2m⊂[0m content integrated).

[32mJSON output

Query structured data with [2m--format=json[0m:

  [2m# Worktrees with merge conflicts
  [2mwt list --format=json | jq '.[] | select(.operation_state == "conflicts")'
  [2m
  [2m# Uncommitted changes
  [2mwt list --format=json | jq '.[] | select(.working_tree.modified)'
  [2m
  [2m# Current worktree
  [2mwt list --format=json | jq '.[] | select(.is_current)'
  [2m
  [2m# Branches ahead of main
  [2mwt list --format=json | jq '.[] | select(.main.ahead > 0)'
  [2m
  [2m# Integrated branches (ready to clean up)
  [2mwt list --format=json | jq '.[] | select(.main_state == "integrated" or .main_state == "same_commit")'

[1mFields:

  Field               Description                                                                                       
  ──────────────────  ──────────────────────────────────────────────────────────────────────────────────────────────────
  [2mbranch[0m              Branch name (null for detached HEAD)                                                              
  [2mpath[0m                Worktree path (absent for branches without worktrees)                                             
  [2mkind[0m                [2m"worktree"[0m or [2m"branch"[0m                                                                            
  [2mcommit[0m              [2m{sha, short_sha, message, timestamp}[0m                                                              
  [2mworking_tree[0m        [2m{staged, modified, untracked, renamed, deleted, diff, diff_vs_main}[0m                               
  [2mmain_state[0m          [2m"is_main"[0m [2m"would_conflict"[0m [2m"same_commit"[0m [2m"integrated"[0m [2m"diverged"[0m [2m"ahead"[0m [2m"behind"[0m                 
  [2mintegration_reason[0m  [2m"ancestor"[0m [2m"trees_match"[0m [2m"no_added_changes"[0m [2m"merge_adds_nothing"[0m (when [2mmain_state == "integrated"[0m)
  [2moperation_state[0m     [2m"conflicts"[0m [2m"rebase"[0m [2m"merge"[0m (absent when no operation in progress)                               
  [2mmain[0m                [2m{ahead, behind, diff}[0m (absent when [2mis_main[0m)                                                       
  [2mremote[0m              [2m{name, branch, ahead, behind}[0m (absent when no tracking branch)                                    
  [2mworktree[0m            [2m{state, reason, detached, bare}[0m                                                                   
  [2mis_main[0m             Main worktree                                                                                     
  [2mis_current[0m          Current worktree                                                                                  
  [2mis_previous[0m         Previous worktree from wt switch                                                                  
  [2mpr[0m                  [2m{ci, source, stale, url}[0m — CI status from PR or branch (absent when no CI)                        
  [2mstatusline[0m          Pre-formatted status with ANSI colors                                                             
  [2msymbols[0m             Raw status symbols without colors (e.g., [2m"!?↓"[0m)                                                   

[32mSee also

- wt select — Interactive worktree picker with live preview
