tests/snapshots/integration__integration_tests__help__help_remove_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - remove
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt remove - Remove worktree and branch
Usage: wt remove [OPTIONS] [WORKTREES]...

Arguments:
  [WORKTREES]...
          Worktree or branch (@ for current)

Options:
      --no-delete-branch
          Keep branch after removal

  -D, --force-delete
          Delete unmerged branches

      --no-background
          Run removal in foreground

  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info

[32mOperation[0m

Removes worktree directory, git metadata, and branch. Requires clean working tree.

### No arguments (remove current)

- Removes current worktree and switches to main worktree
- In main worktree: switches to default branch

### By name (remove specific)

- Removes specified worktree(s) and branches
- Current worktree removed last (switches to main first)

### Worktree resolution

Arguments are resolved to worktrees using [1mpath-first lookup[0m:

1. Compute the expected path for the argument (using the configured path template)
2. If a worktree exists at that path, use it (regardless of what branch it's on)
3. Otherwise, treat the argument as a branch name

[1mExample[0m: If [2mrepo.foo/[0m exists but is on branch [2mbar[0m:
- [2mwt remove foo[0m removes [2mrepo.foo/[0m and the [2mbar[0m branch
- [2mwt remove bar[0m also works (falls back to branch lookup)

[1mConflict detection[0m: If path [2mrepo.foo/[0m has a worktree on branch [2mbar[0m, but
branch [2mfoo[0m has a different worktree at [2mrepo.bar/[0m, an error is raised.

[1mSpecial arguments[0m:

- [2m@[0m - current worktree (by path, works in detached HEAD)
- [2m-[0m - previous worktree (from switch history)
- [2m^[0m - main/default branch worktree

### Branch deletion

By default, branches are deleted only when their content has been integrated:

- Traditional merge: branch is an ancestor of the target (git's [2m-d[0m behavior)
- Squash merge/rebase: branch's tree SHA matches target's tree SHA

This handles workflows where PRs are squash-merged or rebased, which don't preserve
commit ancestry but do integrate the content. Use [2m-D[0m to delete unintegrated
branches, or [2m--no-delete-branch[0m to always keep branches.

### Background removal (default)

- Returns immediately for continued work
- Logs: [2m.git/wt-logs/{branch}-remove.log[0m
- Use [2m--no-background[0m for foreground (blocking)

### Cleanup

Stops any git fsmonitor daemon for the worktree before removal. This prevents orphaned processes when using builtin fsmonitor ([2mcore.fsmonitor=true[0m). No effect on Watchman users.

[32mExamples[0m

Remove current worktree and branch:

  [2mwt remove[0m

Remove specific worktree and branch:

  [2mwt remove feature-branch[0m

Remove worktree but keep branch:

  [2mwt remove --no-delete-branch feature-branch[0m

Remove multiple worktrees:

  [2mwt remove old-feature another-branch[0m

Remove in foreground (blocking):

  [2mwt remove --no-background feature-branch[0m

Switch to default in main:

  [2mwt remove  # (when already in main worktree)[0m
